--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hello Toast</string>
+    <string name="app_name">Hello Constraint</string>
     <string name="_0">0</string>
     <string name="toast">Toast</string>
     <string name="count">Count</string>
