Adding Hello Constraint

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="toast">Toast</string>
     <string name="count">Count</string>
     <string name="message_count">Hello Count</string>
+    <string name="zero">zero</string>
 </resources>
